# Proyecto2-Lenguajes

./: .gitignore  Proyecto2-Lenguajes.cabal  README.md
src/: Crypto.hs  FileManager.hs  Main.hs  Password.hs  Types.hs  UI.hs  User.hs
src/data/: Juan.txt  Pedro.txt
