cabal-version:      3.0
name:               Proyecto2-Lenguajes
version:            0.1.0.0
synopsis:           Administrador de contraseñas en Haskell
-- description:
homepage:
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Tu Nombre
maintainer:         tu.email@example.com
copyright:          2025 Tu Nombre
-- category:
build-type:         Simple
extra-source-files: README.md

executable admin
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:
      base >= 4.17 && < 4.20,
      directory,
      process,
      bytestring,
      text,
      base64-bytestring,
      split
  other-modules:
      UI
      User
      Password
      Crypto
      FileManager
      Types
  default-language: Haskell2010